# BatchBLAST

./: .gitignore  CONFIG.py  blast.py  config  main.py  pyproject.toml  report.py  search.py  testing.fasta
blast_res/0a05YZSknD/: forward journal.csv  reverse journal.csv
blast_res/1GA6pPJgml/: Danio_rerio_chr3_003.csv
blast_res/1VEPfGhMX1/: forward journal.csv  reverse journal.csv
blast_res/68DcIzby89/: forward journal.csv  reverse journal.csv
blast_res/8waEJuZZ1e/: Danio_rerio_chr3_003
blast_res/Bi5N5dkt4H/: forward journal.csv  reverse journal.csv
blast_res/BxiqR9GxLj/: forward journal.csv  reverse journal.csv
blast_res/CpUoZX002A/: forward journal.csv  reverse journal.csv
blast_res/Du1VBy5Iut/: forward journal.csv  reverse journal.csv
blast_res/EBxrtYQbsw/: Danio_rerio_chr3_003.csv
blast_res/GWigptBdpe/: forward journal.csv  reverse journal.csv
blast_res/JOCvGopJW8/: Danio_rerio_chr3_003.csv
blast_res/LRfLROyRLA/: forward journal.csv  reverse journal.csv
blast_res/OVRBgaxyjs/: forward journal.csv  reverse journal.csv
blast_res/PBSZADSzBV/: Danio_rerio_chr3_003.csv
blast_res/PZMl5VbAvU/: forward journal.csv  inputs.fasta  reverse journal.csv
blast_res/PrAeTpO6Sm/: forward journal.csv  reverse journal.csv
blast_res/RKxE5kbZkC/: forward journal.csv  reverse journal.csv
blast_res/UOgcRaUe2R/: forward journal.csv  reverse journal.csv
blast_res/f3W7tg4kIr/: forward journal.csv  reverse journal.csv
blast_res/gDyBWWD1Wy/: forward journal.csv  reverse journal.csv
static/: index.js
templates/: index.html
(+15 files in other folders)
